@@ -69,6 +69,7 @@ default_lag    = 5          # Default length of the period to compute dip in the
 auto_mode      = 0.75       # Between 0 (aggressive) and 1 (no merging). If empty, GUI is launched
 remove_noise   = False      # If True, meta merging will remove obvious noise templates (weak amplitudes)
 noise_limit    = 1.05       # Amplitude at which templates are classified as noise
+sparsity_limit = 0          # Sparsity level (in percentage) to select templates as putative noise (in [0, 1])
 time_rpv       = 5          # Time [in ms] to consider for Refraction Period Violations (RPV) (0 to disable)
 rpv_threshold  = 0.02       # Percentage of RPV allowed while merging
 merge_drifts   = False      # Try to automatically merge drifts, i.e. non overlapping spiking neurons
