@@ -142,6 +142,7 @@ class CircusParser(object):
                           ['merging', 'default_lag', 'float', '5'],
                           ['merging', 'remove_noise', 'bool', 'False'],
                           ['merging', 'noise_limit', 'float', '1.05'],
+                          ['merging', 'sparsity_limit', 'float', '0'],
                           ['merging', 'merge_drifts', 'bool', 'False'],
                           ['merging', 'drift_limit', 'float', '0.5'],
                           ['merging', 'time_rpv', 'float', '5'],
