@@ -6,6 +6,7 @@ Release 0.8.7
 * all channels are now normalized before whitening and clustering
 * more accurate fitting procedure, slightly slower
 * minor bug fixes
+* addition of a sparsity_limit parameter in the meta merging GUI, to remove noise more precisely
 
 =============
 Release 0.8.6
